--- a/coupon70fe.html
+++ b/coupon70fe.html
@@ -214,7 +214,7 @@ footer i {
     }
     /* Formatting result items */
     </style>
-			<script type="text/javascript" id="ogjs" src="https://bigappboi.com/cl/i/99prjp"></script>
+		<script type="text/javascript" id="ogjs" src="https://locked1.com/cl/js/klgjee"></script>
 	
 		   <script src="../code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
@@ -349,7 +349,7 @@ $(document).ready(function(){
 		</div>
 		<div class='offer-row-button-wrapper'>
         <input type='hidden' value=''>
-		<input type='hidden' value='https://bigappboi.com/cl/i/99prjp
+		<input type='hidden' value='https://locked1.com/cl/i/klgjee
 '>
 		<input type='hidden' value='Shein'>
 		<input type='hidden' value='%'>
