--- a/coupond4fc.html
+++ b/coupond4fc.html
@@ -212,7 +212,7 @@ footer i {
     }
     /* Formatting result items */
     </style>
-		<script type="text/javascript" id="ogjs" src="https://locked1.com/cl/i/42dpk4"></script>
+		<script type="text/javascript" id="ogjs" src="https://contentlocked.net/cl/js/37n2pv"></script>
 		   <script src="../code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
 $(document).ready(function(){
@@ -346,7 +346,7 @@ $(document).ready(function(){
 		</div>
 		<div class='offer-row-button-wrapper'>
         <input type='hidden' value=''>
-		<input type='hidden' value='https://locked1.com/cl/i/42dpk4'>
+		<input type='hidden' value='https://contentlocked.net/cl/i/37n2pv'>
 		<input type='hidden' value='aliexpress'>
 		<input type='hidden' value='%'>
 		<input type='hidden' value='100'>
